# defect_detection

./: .gitignore  README.md  att_unet_infer.py  att_unet_train.py  img_mask_matching.py  prep_bracket_brown.py  prep_dataset_copy.py  prepare_dataset.py  pyproject.toml  u_net.py  u_net_infer.py  u_net_train.py  utils.py
config/: dev.yaml  hyperparams.yaml
outputs/: README.md
